--- a/public/locales/pl/translation.json
+++ b/public/locales/pl/translation.json
@@ -51,5 +51,13 @@
         "about": "O Nas",
         "consup": "Pomoc i Kontakt",
         "map": "Mapa"
-    }
+    },
+    "Legend": {
+        "good": "Dobre",
+        "fine": "W porządku",
+        "sbad": "Średnie",
+        "bad": "Słabe",
+        "vbad": "Bardzo słabe",
+        "ebad": "Okropne"
+    }   
 }
