tlumaczenie informacji o pogodzie na angielski i polski

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -60,6 +60,10 @@
         "bad": "bad",
         "vbad": "very bad",
         "ebad": "extremely bad"
+    },
+    "test":{
+        "len":"en"
     }   
+
 
 }
