zrobilem tlumaczenie dni tygodnia, bo nie byly jeszcze zrobione

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -47,6 +47,16 @@
         {"mont":"November"}, 
         {"mont":"December"}
     ],
+    "Days": [
+            
+            {"day":"Monday"},
+            {"day":"Tuesday"},
+            {"day":"Wednesday"},
+            {"day":"Thursday"},
+            {"day":"Friday"},
+            {"day":"Saturday"},
+            {"day":"Sunday"}
+    ],
     "apiLang": {
         "lang": "en"
     },
