naprawilem blad z dniami tygodnia (niedziela wyswietlala sie jako Days.-1.day)

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -48,7 +48,7 @@
         {"mont":"December"}
     ],
     "Days": [
-            
+            {"day":"Sunday"},
             {"day":"Monday"},
             {"day":"Tuesday"},
             {"day":"Wednesday"},
