naprawienie kontaktu i emaila

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -5,7 +5,7 @@
         "2": "Please be respectful and do not spam any of our contacts.",
         "3": "Our socials:",
         "4": "Contact us at:",
-        "5": "for business inquiries:"
+        "5": "for business inquiries and support:"
 
     },
     "About": {
