--- a/public/locales/pl/translation.json
+++ b/public/locales/pl/translation.json
@@ -5,7 +5,7 @@
         "2": "Prosimy o szacunek i nie spamowanie żadnych kontaktów",
         "3": "Nasze serwisy społecznościowe:",
         "4": "Skontaktuj się z nami na:",
-        "5": "w przypadku zapytań biznesowych:"
+        "5": "w przypadku zapytań biznesowych i wsparcia:"
     },
     "About": {
         "1": "O nas",
