--- a/public/locales/pl/translation.json
+++ b/public/locales/pl/translation.json
@@ -125,5 +125,29 @@
         "vbad": "bardzo niezdrowy",
         "ebad": "zagrażający życiu",
         "all": "każdy"
+    },
+    "AssideTexts": {
+        "good": "You shouldn't have to worry about pollution here. Stay happy and worryfree.",
+        "fine": "If you're experiencing heart or lung problems here, try wearing a mask. If the heart or lung problems don't stop try visiting a doctor.",
+        "worse": "Consider wearing a mask and being more green here. Try visiting a doctor if you're experiencing heart or lung problems.",
+        "bad": "It is reccomended to wear a mask and to visit a doctor if any heart or lung problems arise. Consider taking regular doctor visits.",
+        "vbad": "Highly reccomended to wear a mask here. It is reccomended to visit a doctor from time to time. Consider leaving if you feel constantly unwell here.",
+        "ebad": "Masks here are a near neccessity. Visiting a doctor regularly is reccomended and so is leaving the area (if possible).",
+        "random1": "If a city has a lot of smog and/or a very clouded sky, you should stray away from depressing things. This type of weather can be very depressing at times.",
+        "random2": "Masks are a very good way to avoid the effects of air pollution. Masks don't cure lung or heart problems, neither caan they always protect, so if you are experiencing heart or lung problems consider going to a doctor",
+        "random3": "A good way to lower air pollution is to take the bus, train, tram, ride a bike or walk/jog to work instead of riding a car. Doing this occasionally is good, but doing it all the time makes a bigger difference.",
+        "link1": "Find out more about different levels of air pollution here!",
+        "link2": "Find out more about the problem and it's solutions here!"
+    },
+    "AssideTitles": {
+        "main": "Pollution levels are: ",
+        "main2": " What can you do?",
+        "good": "good",
+        "fine": "fine",
+        "worse": "worse",
+        "bad": "bad",
+        "vbad": "very bad",
+        "ebad": "extremely bad"
     }
+
 }
