dodanie tlumaczenia do erorra (w sumie to nwm co robic chyba ide sie uczyc node.js)

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -155,6 +155,12 @@
         "title": "Current AQI:",
         "desc": "Hover on image to see air pollution details !",
         "info": "Pollution Info"
+    },
+    "Error": {
+        "title": "We're sorry :(",
+        "body": "Something's not right",
+        "desc": "Something went wrong"
+
     }
 
 }
