--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -157,64 +157,67 @@
         "info": "Pollution Info"
     },
     "WeatherTips": {
-        "thunderstorm with light rain": "During this weather you can have a really nice time, doing basically anything!",
-        "thunderstorm with rain": "Best to stay at home.",
-        "thunderstorm with heavy rain": "Best to stay at home.",
-        "light thunderstorm": "A light thunderstorm is a good time to observe lightning strikes and the sounds of nature.",
-        "thunderstorm": "It's a good idea to have some rest during a storm.",
-        "heavy thunderstorm": "Be careful! Better stay at home!",
-        "ragged thunderstorm": "This is the right time to have some rest.",
-        "thunderstorm with light drizzle": "Write to somebody that's close to you.",
-        "thunderstorm with drizzle": "Do you exercise? If not, then this is the perfect moment to do so.",
-        "thunderstorm with heavy drizzle": "Turn off all your electrical devices!",
+        "200": "During this weather you can have a really nice time, doing basically anything!",
+        "201": "Best to stay at home.",
+        "202": "Best to stay at home.",
+        "210": "A light thunderstorm is a good time to observe lightning strikes and the sounds of nature.",
+        "211": "It's a good idea to have some rest during a storm.",
+        "212": "Be careful! Better stay at home!",
+        "221": "This is the right time to have some rest.",
+        "230": "Write to somebody that's close to you.",
+        "231": "Do you exercise? If not, then this is the perfect moment to do so.",
+        "232": "Turn off all your electrical devices!",
         
-        "light intensity drizzle": "This is the perfect moment to go for a walk with an umbrella and enjoy the quiet atmosphere.",
-        "drizzle": "drizzle rizz",
-        "heavy intensity drizzle": "Better to seek shelter in buildings than to be absolutely soaked",
-        "light intensity drizzle rain": "This is a good time to have a cosy evening with a good book or film.",
-        "drizzle rain": "Avoid going outside, if possible.",
-        "heavy intensity drizzle rain": "If you like dancing in the rain, then this is your moment to shine! Be careful tot not hit anyone with your umbrella though!",
-        "shower rain and drizzle": "When rain and drizzle meet at your path, it's best to wear some colourful galoshes and make your day colourful too!",
-        "heavy shower rain and drizzle": "Wanna feel like the same happiness you felt as a child? This is the perfect moment to find your inner child and jump on puddles!",
-        "shower drizzle": "Stay at home and rest.",
+        "300": "This is the perfect moment to go for a walk with an umbrella and enjoy the quiet atmosphere.",
+        "301": "drizzle rizz",
+        "302": "Better to seek shelter in buildings than to be absolutely soaked",
+        "310": "This is a good time to have a cosy evening with a good book or film.",
+        "311": "Avoid going outside, if possible.",
+        "312": "If you like dancing in the rain, then this is your moment to shine! Be careful tot not hit anyone with your umbrella though!",
+        "313": "When rain and drizzle meet at your path, it's best to wear some colourful galoshes and make your day colourful too!",
+        "314": "Wanna feel like the same happiness you felt as a child? This is the perfect moment to find your inner child and jump on puddles!",
+        "321": "Stay at home and rest.",
 
-        "light rain": "Wanna feel like a main character in movie or show? Take an umbrella and just go for a walk in the rain.",
-        "moderate rain": "This is a good moment to go for a walk and listen to music.",
-        "heavy intensity rain": "If rain is pouring with heavy intensity, it's best to cuddle up in a warm room.",
-        "very heavy rain": "you should just stay at home.",
-        "extreme rain": "This is not a time to go for a walk or even exit your home! Do some at-home activities, preferably something creative like painting or drawing.",
-        "freezing rain": "Better stay at home and delight yourself with some hot coffee or tea.",
-        "light intensity shower rain": "Perfect moment to take a break and take a hot shower.",
-        "shower rain": "If you need a bit of energy, take a walk in the rain.",
-        "heavy intensity shower rain": "Best to stay at home.",
-        "ragged shower rain": "Better to cuddle up in a safe area and wait out the storm.",
+        "500": "Wanna feel like a main character in movie or show? Take an umbrella and just go for a walk in the rain.",
+        "501": "This is a good moment to go for a walk and listen to music.",
+        "502": "If rain is pouring with heavy intensity, it's best to cuddle up in a warm room.",
+        "503": "you should just stay at home.",
+        "504": "This is not a time to go for a walk or even exit your home! Do some at-home activities, preferably something creative like painting or drawing.",
+        "511": "Better stay at home and delight yourself with some hot coffee or tea.",
+        "520": "Perfect moment to take a break and take a hot shower.",
+        "521": "If you need a bit of energy, take a walk in the rain.",
+        "522": "Best to stay at home.",
+        "531": "Better to cuddle up in a safe area and wait out the storm.",
 
-        "light snow": "This is the perfect moment to go for a walk and make a snowman or organize a snowball fight with your siblings or friends!",
-        "snow": "When there is a lot of snow, you can go skiing, snowboarding or sleigh-riding and feel like a master of winter sports!",
-        "heavy snow": "Make yourself some hot chocolate and watch your favourite film.",
-        "sleet": "This is a good time to do something creative, like drawing!",
-        "light shower sleet": "Go for a walk.",
-        "shower sleet": "This is the perfect moment to make yourself some tea and read your favourite book",
-        "light rain and snow": "Isn't it better to spend this time at home?",
-        "rain and snow": "This is a good time to do something creative.",
-        "light shower snow": "If there is light shower snow, then it's best to stay at home.",
-        "shower snow": "Best to cuddle up in a warm room and spend some quality time with your friends or family.",
-        "heavy shower snow": "If it's intensly snowing, then it's best to stay at home for the day.",
+        "600": "This is the perfect moment to go for a walk and make a snowman or organize a snowball fight with your siblings or friends!",
+        "601": "When there is a lot of snow, you can go skiing, snowboarding or sleigh-riding and feel like a master of winter sports!",
+        "602": "Make yourself some hot chocolate and watch your favourite film.",
+        "611": "This is a good time to do something creative, like drawing!",
+        "612": "Go for a walk.",
+        "613": "This is the perfect moment to make yourself some tea and read your favourite book",
+        "615": "Isn't it better to spend this time at home?",
+        "616": "This is a good time to do something creative.",
+        "620": "If there is light shower snow, then it's best to stay at home.",
+        "621": "Best to cuddle up in a warm room and spend some quality time with your friends or family.",
+        "622": "If it's intensly snowing, then it's best to stay at home for the day.",
 
-        "mist": "Make yourself a tasty cup of coffee or tea and relax on the couch. A good idea is to read your favourite book or watch a film!",
-        "smoke": "If there is smoke in the air, best close your windows and doors.",
-        "haze": "Better stay at home.",
-        "sand/dust whirls": "This is good time to start doing some creative at-home activities.",
-        "fog": "Make yourself a delicious soup, sit back and relax. Just enjoy the vibe.",
-        "sand": "This is not a good time for a walk!",
-        "dust": "If you see sand or dust in the air, then it's best to cover your eyes,nose and mouth.",
-        "volcanic ash": "If you can see volcanic ash in the area, then it's best to stay at home and close your windows.",
-        "squalls": "Better seek shelter.",
-        "tornado": "If a tornado is approaching, then it's best to seek shelter in a secure and safe area.",
+        "701": "Make yourself a tasty cup of coffee or tea and relax on the couch. A good idea is to read your favourite book or watch a film!",
+        "711": "If there is smoke in the air, best close your windows and doors.",
+        "721": "Better stay at home.",
+        "731": "This is good time to start doing some creative at-home activities.",
+        "741": "Make yourself a delicious soup, sit back and relax. Just enjoy the vibe.",
+        "751": "This is not a good time for a walk!",
+        "761": "If you see sand or dust in the air, then it's best to cover your eyes,nose and mouth.",
+        "762": "If you can see volcanic ash in the area, then it's best to stay at home and close your windows.",
+        "771": "Better seek shelter.",
+        "781": "If a tornado is approaching, then it's best to seek shelter in a secure and safe area.",
 
-        "clear sky": "Go for a walk with your friends (or alone)!",
+        "800": "Go for a walk with your friends (or alone)!",
 
-        "Clouds": "If there are only a few clouds in the sky, then it's best to go outside."
+        "801": "If there are only a few clouds in the sky, then it's best to go outside.",
+        "802": "If there are only a few clouds in the sky, then it's best to go outside.",
+        "803": "If there are only a few clouds in the sky, then it's best to go outside.",
+        "804": "If there are only a few clouds in the sky, then it's best to go outside."
     },
     "Error": {
         "title": "We're sorry :(",
