--- a/public/locales/pl/translation.json
+++ b/public/locales/pl/translation.json
@@ -156,64 +156,67 @@
         "info": "Info o Zanieczyszczeniu"
     },
     "WeatherTips": {
-        "thunderstorm with light rain": "Nie daj się zwieść łagodnym stukotem kropel deszczu!",
-        "thunderstorm with rain": "lepiej zostań w domu",
-        "thunderstorm with heavy rain": "lepiej zostać w domu",
-        "light thunderstorm": "Lekka burza z piorunami to dobry czas, aby obserwować spektakularne błyski i dźwięki natury",
-        "thunderstorm": "Burza to czas, rzeby odpocząć",
-        "heavy thunderstorm": "bądź ostrożny, a lepiej zostań w domu!",
-        "ragged thunderstorm": "To czas, żeby odpocząć",
-        "thunderstorm with light drizzle": "Napisz do bliskiej osoby",
-        "thunderstorm with drizzle": "Czy ćwiczysz w domu? Jeżeli nie, to teraz jest idealny moment",
-        "thunderstorm with heavy drizzle": "Wyłącz wszystkie urządzenia elektryczne",
+        "200": "Nie daj się zwieść łagodnym stukotem kropel deszczu!",
+        "201": "lepiej zostań w domu",
+        "202": "lepiej zostać w domu",
+        "210": "Lekka burza z piorunami to dobry czas, aby obserwować spektakularne błyski i dźwięki natury",
+        "211": "Burza to czas, rzeby odpocząć",
+        "212": "bądź ostrożny, a lepiej zostań w domu!",
+        "221": "To czas, żeby odpocząć",
+        "230": "Napisz do bliskiej osoby",
+        "231": "Czy ćwiczysz w domu? Jeżeli nie, to teraz jest idealny moment",
+        "232": "Wyłącz wszystkie urządzenia elektryczne",
         
-        "light intensity drizzle": "to jest idealny czas na spacer z parasolem i cieszenie się cichą atmosferą",
-        "drizzle": "drizzle rizz",
-        "heavy intensity drizzle": "Lepiej poszukaj schronienia w budynkach, niż próbować przemoknąć do suchej nitki.",
-        "light intensity drizzle rain": "To dobry czas na przytulne spędzenie czasu w domu z dobrą książką lub filmem",
-        "drizzle rain": "unikaj wychodzenia na zewnątrz, jeśli to tylko możliwe.",
-        "heavy intensity drizzle rain": "Jeśli lubisz tańczyć w deszczu, to właśnie teraz jest twój czas, ale pamiętaj, żeby nie uderzyć przypadkiem w kogoś parasolem!",
-        "shower rain and drizzle": "Kiedy deszcz i mżawka spotykają się na Twojej drodze, to najlepiej ubrać się w kolorowe kalosze i zrobić sobie kolorowy dzień!",
-        "heavy shower rain and drizzle": "Jeśli chcesz poczuć się jak prawdziwy poszukiwacz przygód, to teraz jest idealna pora, by odkryć swoje wewnętrzne dziecko i skakać po kałużach!",
-        "shower drizzle": "Zostań w domu i odpocznij",
+        "300": "to jest idealny czas na spacer z parasolem i cieszenie się cichą atmosferą",
+        "301": "drizzle rizz",
+        "302": "Lepiej poszukaj schronienia w budynkach, niż próbować przemoknąć do suchej nitki.",
+        "310": "To dobry czas na przytulne spędzenie czasu w domu z dobrą książką lub filmem",
+        "311": "unikaj wychodzenia na zewnątrz, jeśli to tylko możliwe.",
+        "312": "Jeśli lubisz tańczyć w deszczu, to właśnie teraz jest twój czas, ale pamiętaj, żeby nie uderzyć przypadkiem w kogoś parasolem!",
+        "313": "Kiedy deszcz i mżawka spotykają się na Twojej drodze, to najlepiej ubrać się w kolorowe kalosze i zrobić sobie kolorowy dzień!",
+        "314": "Jeśli chcesz poczuć się jak prawdziwy poszukiwacz przygód, to teraz jest idealna pora, by odkryć swoje wewnętrzne dziecko i skakać po kałużach!",
+        "321": "Zostań w domu i odpocznij",
 
-        "light rain": "Jeśli chcesz poczuć się jak bohater komedii, to weź ze sobą parasolkę i spaceruj po deszczu",
-        "moderate rain": "To dobry czas na to, by wyjść na spacer i posłuchać odprężającej muzyki",
-        "heavy intensity rain": "Gdy deszcz pada z dużą intensywnością, lepiej schować się w ciepłym pomieszczeniu",
-        "very heavy rain": "To czas, żeby zostać w domu",
-        "extreme rain": "To nie czas na spacer lub wyjście z domu! Zrobić coś kreatywnego, jak malowanie czy rysowanie.",
-        "freezing rain": "Lepiej pozostać w domu i cieszyć się gorącą kawą lub herbatą.",
-        "light intensity shower rain": "To idealna pora na to, by zrobić sobie przerwę i wziąć ciepły prysznic",
-        "shower rain": "Jeśli potrzebujesz odrobiny energii, to zrób sobie krótki spacer po deszczu",
-        "heavy intensity shower rain": "Lepiej zostań w domu",
-        "ragged shower rain": "Lepiej schować się w bezpiecznym miejscu i poczekać, aż burza minie.",
+        "500": "Jeśli chcesz poczuć się jak bohater komedii, to weź ze sobą parasolkę i spaceruj po deszczu",
+        "501": "To dobry czas na to, by wyjść na spacer i posłuchać odprężającej muzyki",
+        "502": "Gdy deszcz pada z dużą intensywnością, lepiej schować się w ciepłym pomieszczeniu",
+        "503": "To czas, żeby zostać w domu",
+        "504": "To nie czas na spacer lub wyjście z domu! Zrobić coś kreatywnego, jak malowanie czy rysowanie.",
+        "511": "Lepiej pozostać w domu i cieszyć się gorącą kawą lub herbatą.",
+        "520": "To idealna pora na to, by zrobić sobie przerwę i wziąć ciepły prysznic",
+        "521": "Jeśli potrzebujesz odrobiny energii, to zrób sobie krótki spacer po deszczu",
+        "522": "Lepiej zostań w domu",
+        "531": "Lepiej schować się w bezpiecznym miejscu i poczekać, aż burza minie.",
 
-        "light snow": "To idealna pora na to, by wyjść na spacer i zrobić bałwana lub zorganizować bitwę na śnieżki z rodzeństwem lub przyjaciółmi!",
-        "snow": "Gdy leży już sporo śniegu, to możesz wybrać się na narty, snowboard lub sanki i poczuć się jak mistrz sportów zimowych!",
-        "heavy snow": "Zrób sobie gorącą czekoladę i obejrzyj swój ulubiony film",
-        "sleet": "To dobry czas na to, by zrobić coś kreatywnego, jak malowanie",
-        "light shower sleet": "Wyjdź na spacer.",
-        "shower sleet": "To idealny moment, by zrobić sobie herbatę i przeczytać ulubioną książkę.",
-        "light rain and snow": "Czy nie lepiej spędzić ten czas w domu?",
-        "rain and snow": "To dobry czas na to, by zrobić coś kreatywnego",
-        "light shower snow": "Gdy spada intensywny śnieg z prysznicem, to lepiej pozostać w domu",
-        "shower snow": "Lepiej schowaj się w ciepłym pomieszczeniu i spędź sobie dobry czas z rodziną lub przyjaciółmi.",
-        "heavy shower snow": "Gdy spada intensywny śnieg z prysznicem, to lepiej pozostać w domu",
+        "600": "To idealna pora na to, by wyjść na spacer i zrobić bałwana lub zorganizować bitwę na śnieżki z rodzeństwem lub przyjaciółmi!",
+        "601": "Gdy leży już sporo śniegu, to możesz wybrać się na narty, snowboard lub sanki i poczuć się jak mistrz sportów zimowych!",
+        "602": "Zrób sobie gorącą czekoladę i obejrzyj swój ulubiony film",
+        "611": "To dobry czas na to, by zrobić coś kreatywnego, jak malowanie",
+        "612": "Wyjdź na spacer.",
+        "613": "To idealny moment, by zrobić sobie herbatę i przeczytać ulubioną książkę.",
+        "615": "Czy nie lepiej spędzić ten czas w domu?",
+        "616": "To dobry czas na to, by zrobić coś kreatywnego",
+        "620": "Gdy spada intensywny śnieg z prysznicem, to lepiej pozostać w domu",
+        "621": "Lepiej schowaj się w ciepłym pomieszczeniu i spędź sobie dobry czas z rodziną lub przyjaciółmi.",
+        "622": "Gdy spada intensywny śnieg z prysznicem, to lepiej pozostać w domu",
 
-        "mist": "Zrób sobie pyszną kawę lub herbatę i rozgość się na kanapie z ulubioną książką lub filmem!",
-        "smoke": "Gdy w powietrzu unosi się dym, to lepiej zamknij okna i drzwi.",
-        "haze": "Lepiej zostań w domu",
-        "sand/dust whirls": "To jest czas, żeby zrobić coś kreatywnego",
-        "fog": "Zrób sobie pyszną zupę i poczuj jak dobrze jest w domu",
-        "sand": "To nie jest czas na spacer!",
-        "dust": "Gdy w powietrzu unosi się piasek lub kurz, to lepiej zakryj oczy, nos i usta.",
-        "volcanic ash": "Jeśli w powietrzu unosi się popiół wulkaniczny, to lepiej pozostać w domu i zamknąć okna",
-        "squalls": "Lepiej schowaj się w bezpiecznym pomieszczeniu",
-        "tornado": "Jeśli zbliża się tornado, to lepiej schować się w bezpiecznym pomieszczeniu",
+        "701": "Zrób sobie pyszną kawę lub herbatę i rozgość się na kanapie z ulubioną książką lub filmem!",
+        "711": "Gdy w powietrzu unosi się dym, to lepiej zamknij okna i drzwi.",
+        "721": "Lepiej zostań w domu",
+        "731": "To jest czas, żeby zrobić coś kreatywnego",
+        "741": "Zrób sobie pyszną zupę i poczuj jak dobrze jest w domu",
+        "751": "To nie jest czas na spacer!",
+        "761": "Gdy w powietrzu unosi się piasek lub kurz, to lepiej zakryj oczy, nos i usta.",
+        "762": "Jeśli w powietrzu unosi się popiół wulkaniczny, to lepiej pozostać w domu i zamknąć okna",
+        "771": "Lepiej schowaj się w bezpiecznym pomieszczeniu",
+        "781": "Jeśli zbliża się tornado, to lepiej schować się w bezpiecznym pomieszczeniu",
 
-        "clear sky": "Wyjdź na spacer z przyjaciółmi!",
+        "800": "Wyjdź na spacer z przyjaciółmi!",
 
-        "Clouds": "Jeśli na niebie jest tylko kilka chmur, to najlepiej wyjść na zewnątrz"
+        "801": "Jeśli na niebie jest tylko kilka chmur, to najlepiej wyjść na zewnątrz",
+        "802": "Jeśli na niebie jest tylko kilka chmur, to najlepiej wyjść na zewnątrz",
+        "803": "Jeśli na niebie jest tylko kilka chmur, to najlepiej wyjść na zewnątrz",
+        "804": "Jeśli na niebie jest tylko kilka chmur, to najlepiej wyjść na zewnątrz"
     },
     "Error": {
         "title": "Przepraszamy :(",
