--- a/public/locales/pl/translation.json
+++ b/public/locales/pl/translation.json
@@ -43,7 +43,7 @@
     "Home": {
         "pageTitle": "Sprawdź jakość powietrza, pogodę oraz ciekawe miejsca w twojej okolicy",
         "title": "Wiedz, czym ODDYCHASZ",
-        "input": "Wpisza nazwę miasta",
+        "input": "Wpisz nazwę miasta",
         "error": "Nie znaleziono miasta. Spróbuj ponownie",
         "part1": "Kliknij mnie żeby ",
         "hide": "schować",
